--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="http://localhost:5500/">
+            <a class="navbar-brand" href="https://www.relievv.in/">
                <img src="/assets/images/logo.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -304,4 +304,5 @@
      <script src="assets/js/script.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
