Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="https://www.relievv.in/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#tools">All Tools</a>
@@ -306,3 +306,4 @@
 </body>
 
 </html>
+
