Fix HTML entities in index.html
Replaced HTML entities with actual characters in index.html.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RELIEVV - Automate the Boring</title>
+    <title>RELIEVV</title>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -246,7 +246,7 @@
                 <div class="row">
                         <div class="col-lg-4">
                             <div class="d-flex flex-column align-items-start position-relative">
-                                 <a class="navbar-brand linkfooter-gradvl" href="http://localhost:5500/">
+                                 <a class="navbar-brand linkfooter-gradvl" href="https://www.relievv.in/">
                                     <img src="/assets/images/logo.png" alt="logo">
                              </a>
                              <p class="mt-0 text-dark">Automating Boring manual tasks in finance audit and accounts</p>
@@ -280,7 +280,7 @@
                                         <input type="email" placeholder="Enter your Email" class="flex-grow-1 border outline-0 px-3 h-100 rounded-2" id="">
                                         <button class="h-100 border-0 w-auto btn-use-tool rounded-2">Subscribe</button>
                                     </form> --> 
-                                <li class="flex-grow-1"><a href="#home"  class="cat-link text-decoration-none text-dark fw-500"> Home</a></li>
+                                <li class="flex-grow-1"><a href="https://www.relievv.in/"  class="cat-link text-decoration-none text-dark fw-500"> Home</a></li>
                                 <li class="flex-grow-1"><a href="#tools" class="cat-link text-decoration-none text-dark fw-500">  Tools</a></li>
                                 <li class="flex-grow-1"><a href="#categories" class="cat-link text-decoration-none text-dark fw-500">  Categories</a></li>
                                 <li class="flex-grow-1"><a href="#features" class="cat-link text-decoration-none text-dark fw-500"> Why Choose Us</a></li>
@@ -306,4 +306,5 @@
 </body>
 
 </html>
+
 
